PR/50460: Abhinav Upadhyay: Fix legacy apropos query to match both the name and the one line description and delete extra args.